p2/manifests/overlays/gateway/app1-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app1-route
spec:
  parentRefs:
  - name: web
    sectionName: http
  hostnames: ["app1.com"]
  rules:
  - backendRefs:
    - name: app-one
      port: 80
