p2/manifests/overlays/gateway/app2-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app2-route
spec:
  parentRefs:
  - name: web
    sectionName: http
  hostnames: ["app2.com"]
  rules:
  - backendRefs:
    - name: app-two
      port: 80
