p2/manifests/overlays/gateway/app3-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app3-route
spec:
  parentRefs:
  - name: web
    sectionName: http
  rules:
  - backendRefs:
    - name: app-three
      port: 80
